unpackaged/main/default/objects/Tax_Ops_Failed_Filing__c/Tax_Ops_Failed_Filing__c.object-meta.xml
<CustomObject>
    <label>Tax Ops Failed Filing</label>
    <nameField>
        <displayFormat>FF-{0000000}</displayFormat>
        <label>Tax Ops Failed Filing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Ops Failed Filings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>