unpackaged/main/default/objects/Tax_Ops_Failed_Filing__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tax Ops Failed Filings</relationshipLabel>
    <relationshipName>Tax_Ops_Failed_Filings</relationshipName>
    <type>Lookup</type>
</CustomField>