unpackaged/main/default/objects/Tax_Ops_Failed_Filing__c/fields/Agency_Error__c.field-meta.xml
<CustomField>
    <fullName>Agency_Error__c</fullName>
    <label>Agency Error</label>
    <type>TextArea</type>
</CustomField>