unpackaged/main/default/objects/Tax_Ops_Failed_Filing__c/fields/Agency_Information__c.field-meta.xml
<CustomField>
    <fullName>Agency_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Information</label>
    <referenceTo>Agency_Information__c</referenceTo>
    <relationshipLabel>Tax Ops Failed Filings</relationshipLabel>
    <relationshipName>Tax_Ops_Failed_Filings</relationshipName>
    <type>Lookup</type>
</CustomField>