unpackaged/main/default/objects/Tax_Ops_Failed_Filing__c/fields/CC_Ids__c.field-meta.xml
<CustomField>
    <fullName>CC_Ids__c</fullName>
    <label>CC Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>