unpackaged/main/default/objects/Tax_Ops_Failed_Filing__c/fields/Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent__c</fullName>
    <label>Date Sent</label>
    <type>DateTime</type>
</CustomField>