unpackaged/main/default/objects/Tax_Ops_Failed_Filing__c/fields/To_Address__c.field-meta.xml
<CustomField>
    <fullName>To_Address__c</fullName>
    <label>To  Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>