unpackaged/main/default/objects/Tax_Ops_Failed_Filing__c/fields/ZP_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>ZP_Company_Id__c</fullName>
    <externalId>true</externalId>
    <label>ZP Company Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>